control muestra EPS

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -544,7 +544,7 @@
           <%= f.label :pregunta12_a, "12A. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_a_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_a_hora , id:"res_pregunta12_a_hora" %>
           <%= f.select :pregunta12_a, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_a"}%>
           </div>
         </div>
@@ -593,7 +593,7 @@
             <%= f.label :pregunta12_b1, "12B1. Tiempo espera", id:"servicios"%>
             </div>
             <div class="col-md-8 input-group">
-            <%= f.text_field :pregunta12_b1_hora , id:"servicios"%>
+            <%= f.text_field :pregunta12_b1_hora , id:"res_pregunta12_b1_hora"%>
             <%= f.select :pregunta12_b1, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b1"}%>
             </div>
           </div>
@@ -643,7 +643,7 @@
             <%= f.label :pregunta12_b2, "12B2. Tiempo espera" , id:"servicios"%>
             </div>
             <div class="col-md-8 input-group">
-            <%= f.text_field :pregunta12_b2_hora %>
+            <%= f.text_field :pregunta12_b2_hora , id:"res_pregunta12_b2_hora" %>
             <%= f.select :pregunta12_b2, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b2"}%>
             </div>
           </div>
@@ -692,7 +692,7 @@
             <%= f.label :pregunta12_b3, "12B3. Tiempo espera" , id:"servicios"%>
             </div>
             <div class="col-md-8 input-group">
-            <%= f.text_field :pregunta12_b3_hora %>
+            <%= f.text_field :pregunta12_b3_hora , id:"res_pregunta12_b3_hora" %>
             <%= f.select :pregunta12_b3, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b3"}%>
             </div>
           </div>
@@ -741,7 +741,7 @@
             <%= f.label :pregunta12_b4, "12B4. Tiempo espera" , id:"servicios"%>
             </div>
             <div class="col-md-8 input-group">
-            <%= f.text_field :pregunta12_b4_hora , id:"servicios" %>
+            <%= f.text_field :pregunta12_b4_hora , id:"res_pregunta12_b4_hora" %>
             <%= f.select :pregunta12_b4, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b4"}%>
             </div>
           </div>
@@ -791,7 +791,7 @@
           <%= f.label :pregunta12_b5, "12B5. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_b5_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_b5_hora , id:"res_pregunta12_b5_hora"%>
           <%= f.select :pregunta12_b5, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b5"}%>
           </div>
         </div>
@@ -840,7 +840,7 @@
           <%= f.label :pregunta12_b6, "12B6. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_b6_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_b6_hora , id:"res_pregunta12_b6_hora"%>
           <%= f.select :pregunta12_b6, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_b6"}%>
           </div>
         </div>
@@ -889,7 +889,7 @@
           <%= f.label :pregunta12_c, "12C. Tiempo espera" , id:"res_pregunta12_c"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_c_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_c_hora , id:"res_pregunta12_c_hora"%>
           <%= f.select :pregunta12_c, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_c"}%>
           </div>
         </div>
@@ -939,7 +939,7 @@
           <%= f.label :pregunta12_d, "12D. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_d_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_d_hora , id:"res_pregunta12_d_hora" %>
           <%= f.select :pregunta12_d, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_d"}%>
           </div>
         </div>
@@ -988,7 +988,7 @@
           <%= f.label :pregunta12_e, "12E. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_e_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_e_hora , id:"res_pregunta12_e_hora"%>
           <%= f.select :pregunta12_e, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_e"}%>
           </div>
         </div>
@@ -1037,7 +1037,7 @@
           <%= f.label :pregunta12_f, "12F. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_f_hora %>
+          <%= f.text_field :pregunta12_f_hora , id:"res_pregunta12_f_hora" %>
           <%= f.select :pregunta12_f, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_f"}%>
           </div>
         </div>
@@ -1086,7 +1086,7 @@
           <%= f.label :pregunta12_g, "12G. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_g_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_g_hora , id:"res_pregunta12_g_hora" %>
           <%= f.select :pregunta12_g, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_g"}%>
           </div>
         </div>
@@ -1135,7 +1135,7 @@
           <%= f.label :pregunta12_h, "12H. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_h_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_h_hora , id:"res_pregunta12_h_hora" %>
           <%= f.select :pregunta12_h, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_h"}%>
           </div>
         </div>
@@ -1184,7 +1184,7 @@
           <%= f.label :pregunta12_i, "12I. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_i_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_i_hora , id:"res_pregunta12_i_hora" %>
           <%= f.select :pregunta12_i, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_i"}%>
           </div>
         </div>
@@ -1233,7 +1233,7 @@
           <%= f.label :pregunta12_j, "12J. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_j_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_j_hora , id:"res_pregunta12_j_hora" %>
           <%= f.select :pregunta12_j, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_j"}%>
           </div>
         </div>
@@ -1282,7 +1282,7 @@
           <%= f.label :pregunta12_k, "12K. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_k_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_k_hora , id:"res_pregunta12_k_hora"%>
           <%= f.select :pregunta12_k, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_k"}%>
           </div>
         </div>
@@ -1331,7 +1331,7 @@
           <%= f.label :pregunta12_l, "12L. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_l_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_l_hora , id:"res_pregunta12_l_hora"%>
           <%= f.select :pregunta12_l, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_l"}%>
           </div>
         </div>
@@ -1380,7 +1380,7 @@
           <%= f.label :pregunta12_m, "12M. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_m_hora , id:"servicios" %>
+          <%= f.text_field :pregunta12_m_hora , id:"res_pregunta12_m_hora" %>
           <%= f.select :pregunta12_m, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_m"}%>
           </div>
         </div>
@@ -1429,7 +1429,7 @@
           <%= f.label :pregunta12_n, "12N. Tiempo espera" , id:"servicios"%>
           </div>
           <div class="col-md-8 input-group">
-          <%= f.text_field :pregunta12_n_hora , id:"servicios"%>
+          <%= f.text_field :pregunta12_n_hora , id:"res_pregunta12_n_hora"%>
           <%= f.select :pregunta12_n, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_n"}%>
           </div>
         </div>
@@ -1447,6 +1447,56 @@
         </div>
       </div>  
     </div>
+
+    <div class="input-group">
+      <div class="col-md-6">
+      <label id="servicios">O. Cuidados paleativos </label>
+      </div>
+      <div class="col-md-12 input-group">
+        <div class="col-md-4">
+        <%= f.label :pregunta10_o, "10O. Lo Utilizó" , id:"servicios"%>
+        </div>
+        <div class="col-md-8">
+        <%= f.select :pregunta10_o, ["Si","No"],{:include_blank => true}, {class: "form-control", id:"res_pregunta10_o"}%>
+        </div>
+      </div>
+      <div id="pregunta10_o">
+        <div class="col-md-12 input-group">
+          <div class="col-md-3">
+          <label id="servicios">11O. Cómo califica el ÚLTIMO servicio recibido?</label>      
+          </div>
+          <div class="col-md-9 input-group" style="padding-top: 10px;">
+          <%= f.radio_button :pregunta11_o, "Muy mal servicio" ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta11_o"}%><div>Muy mal servicio</div>
+          <%= f.radio_button :pregunta11_o, "Mal servicio", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta11_o"} %><div>Mal servicio</div>
+          <%= f.radio_button :pregunta11_o, "Ni bueno ni malo", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta11_o"} %><div>Ni bueno ni malo </div>
+          <%= f.radio_button :pregunta11_o, "Buen servicio", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta11_o"} %><div>Buen servicio</div>
+          <%= f.radio_button :pregunta11_o, "Muy buen servicio", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta11_o"} %><div>Muy buen servicio</div>
+          </div>
+        </div>
+        <div class="col-md-12 input-group">
+          <div class="col-md-4">
+          <%= f.label :pregunta12_o, "12O. Tiempo espera" , id:"servicios"%>
+          </div>
+          <div class="col-md-8 input-group">
+          <%= f.text_field :pregunta12_o_hora , id:"res_pregunta12_o_hora"%>
+          <%= f.select :pregunta12_o, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;", id:"res_pregunta12_o"}%>
+          </div>
+        </div>
+        <div class="col-md-12 input-group">
+          <div class="col-md-4">
+          <label id="servicios">13O. Cómo califica el ÚLTIMO servicio recibido?</label>      
+          </div>
+          <div class="col-md-8 input-group" style="padding-top: 10px;">
+          <%= f.radio_button :pregunta13_o, "Muy largo" ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta13_o"}%><div>Muy largo</div>
+          <%= f.radio_button :pregunta13_o, "Largo", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta13_o"} %><div>Largo</div>
+          <%= f.radio_button :pregunta13_o, "Ni largo ni corto", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta13_o"} %><div>Ni largo ni corto</div>
+          <%= f.radio_button :pregunta13_o, "Corto", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta13_o"} %><div>Corto</div>
+          <%= f.radio_button :pregunta13_o, "Muy corto", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"res_pregunta13_o"} %><div>Muy corto</div>
+          </div>
+        </div>
+      </div>  
+    </div>
+
   </div>
   <div id="UrgenciasDIV">
     <br>
@@ -4090,6 +4140,14 @@ $(document).ready(function(){
           $("#pregunta10_n").removeClass('hidden');
         }
       }); 
+    $('#res_pregunta10_o').change(function(){
+        if($('#res_pregunta10_o').val() == "No"){
+          $("#pregunta10_o").addClass('hidden');
+        }
+        else{
+          $("#pregunta10_o").removeClass('hidden');
+        }
+      }); 
      $('#res_pregunta_15b').change(function(){
         if($('#res_pregunta_15b').val() == "Si"){
           $("#pregunta15c").addClass('hidden');
@@ -4890,7 +4948,11 @@ $(document).ready(function(){
         {
           Pregunta: "Pregunta 12a",
           Respuesta : $("#res_pregunta12_a").val()
-        },   
+        },
+
+          Pregunta: "Pregunta 12a hora",
+          Respuesta : $("#res_pregunta12_a_hora").val()
+        },    
         {
           Pregunta: "Pregunta 13a",
           Respuesta : $("#res_pregunta13_a").val()
@@ -4906,7 +4968,11 @@ $(document).ready(function(){
         {
           Pregunta: "Pregunta 12_b1",
           Respuesta : $("#res_pregunta12_b1").val()
-        },   
+        }, 
+        {
+          Pregunta: "Pregunta 12_b1 hora",
+          Respuesta : $("#res_pregunta12_b1_hora").val()
+        },  
         {
           Pregunta: "Pregunta 13_b1",
           Respuesta : $("#res_pregunta13_b1").val()
@@ -4922,6 +4988,10 @@ $(document).ready(function(){
         {
           Pregunta: "Pregunta 12_b2",
           Respuesta : $("#res_pregunta12_b2").val()
+        },
+        {
+          Pregunta: "Pregunta 12_b2 hora",
+          Respuesta : $("#res_pregunta12_b2_hora").val()
         },   
         {
           Pregunta: "Pregunta 13_b2",
@@ -4938,6 +5008,10 @@ $(document).ready(function(){
         {
           Pregunta: "Pregunta 12_b3",
           Respuesta : $("#res_pregunta12_b3").val()
+        },
+        {
+          Pregunta: "Pregunta 12_b3 hora",
+          Respuesta : $("#res_pregunta12_b3_hora").val()
         },   
         {
           Pregunta: "Pregunta 13_b3",
@@ -4956,6 +5030,10 @@ $(document).ready(function(){
           Respuesta : $("#res_pregunta12_b4").val()
         },   
         {
+          Pregunta: "Pregunta 12_b4 hora",
+          Respuesta : $("#res_pregunta12_b4_hora").val()
+        },
+        {
           Pregunta: "Pregunta 13_b4",
           Respuesta : $("#res_pregunta13_b4").val()
         },
@@ -4972,6 +5050,10 @@ $(document).ready(function(){
           Respuesta : $("#res_pregunta12_b5").val()
         },   
         {
+          Pregunta: "Pregunta 12_b5",
+          Respuesta : $("#res_pregunta12_b5_hora").val()
+        },
+        {
           Pregunta: "Pregunta 13_b5",
           Respuesta : $("#res_pregunta13_b5").val()
         },
@@ -4986,10 +5068,34 @@ $(document).ready(function(){
         {
           Pregunta: "Pregunta 12_b6",
           Respuesta : $("#res_pregunta12_b6").val()
-        },   
+        }, 
+        {
+          Pregunta: "Pregunta 12_b6_hora",
+          Respuesta : $("#res_pregunta12_b6_hora").val()
+        },  
         {
           Pregunta: "Pregunta 13_b6",
           Respuesta : $("#res_pregunta13_b6").val()
+        },
+        {
+          Pregunta: "Pregunta 10_c",
+          Respuesta : $("#res_pregunta10_c").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_c",
+          Respuesta : $("#res_pregunta11_c").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_c",
+          Respuesta : $("#res_pregunta12_c").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_c_hora",
+          Respuesta : $("#res_pregunta12_c_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_c",
+          Respuesta : $("#res_pregunta13_c").val()
         },
         {
           Pregunta: "Pregunta 14",
