control muestra EPS

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -5098,6 +5098,246 @@ $(document).ready(function(){
           Respuesta : $("#res_pregunta13_c").val()
         },
         {
+          Pregunta: "Pregunta 10_d",
+          Respuesta : $("#res_pregunta10_d").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_d",
+          Respuesta : $("#res_pregunta11_d").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_d",
+          Respuesta : $("#res_pregunta12_d").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_d_hora",
+          Respuesta : $("#res_pregunta12_d_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_d",
+          Respuesta : $("#res_pregunta13_d").val()
+        },
+        {
+          Pregunta: "Pregunta 10_e",
+          Respuesta : $("#res_pregunta10_e").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_e",
+          Respuesta : $("#res_pregunta11_e").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_e",
+          Respuesta : $("#res_pregunta12_e").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_e_hora",
+          Respuesta : $("#res_pregunta12_e_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_e",
+          Respuesta : $("#res_pregunta13_f").val()
+        },
+        {
+          Pregunta: "Pregunta 10_f",
+          Respuesta : $("#res_pregunta10_f").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_f",
+          Respuesta : $("#res_pregunta11_f").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_f",
+          Respuesta : $("#res_pregunta12_f").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_f_hora",
+          Respuesta : $("#res_pregunta12_f_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_f",
+          Respuesta : $("#res_pregunta13_f").val()
+        },
+        {
+          Pregunta: "Pregunta 10_g",
+          Respuesta : $("#res_pregunta10_g").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_g",
+          Respuesta : $("#res_pregunta11_g").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_g",
+          Respuesta : $("#res_pregunta12_g").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_g_hora",
+          Respuesta : $("#res_pregunta12_g_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_g",
+          Respuesta : $("#res_pregunta13_g").val()
+        },
+        {
+          Pregunta: "Pregunta 10_h",
+          Respuesta : $("#res_pregunta10_h").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_h",
+          Respuesta : $("#res_pregunta11_h").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_h",
+          Respuesta : $("#res_pregunta12_h").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_h_hora",
+          Respuesta : $("#res_pregunta12_h_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_h",
+          Respuesta : $("#res_pregunta13_h").val()
+        },
+        {
+          Pregunta: "Pregunta 10_i",
+          Respuesta : $("#res_pregunta10_i").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_i",
+          Respuesta : $("#res_pregunta11_i").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_i",
+          Respuesta : $("#res_pregunta12_i").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_i_hora",
+          Respuesta : $("#res_pregunta12_i_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_i",
+          Respuesta : $("#res_pregunta13_j").val()
+        },
+        {
+          Pregunta: "Pregunta 10_j",
+          Respuesta : $("#res_pregunta10_j").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_j",
+          Respuesta : $("#res_pregunta11_j").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_j",
+          Respuesta : $("#res_pregunta12_j").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_j_hora",
+          Respuesta : $("#res_pregunta12_j_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_j",
+          Respuesta : $("#res_pregunta13_j").val()
+        },
+        {
+          Pregunta: "Pregunta 10_k",
+          Respuesta : $("#res_pregunta10_k").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_k",
+          Respuesta : $("#res_pregunta11_k").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_k",
+          Respuesta : $("#res_pregunta12_k").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_k_hora",
+          Respuesta : $("#res_pregunta12_k_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_k",
+          Respuesta : $("#res_pregunta13_k").val()
+        },
+        {
+          Pregunta: "Pregunta 10_l",
+          Respuesta : $("#res_pregunta10_l").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_l",
+          Respuesta : $("#res_pregunta11_l").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_l",
+          Respuesta : $("#res_pregunta12_l").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_l_hora",
+          Respuesta : $("#res_pregunta12_l_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_l",
+          Respuesta : $("#res_pregunta13_l").val()
+        },
+        {
+          Pregunta: "Pregunta 10_m",
+          Respuesta : $("#res_pregunta10_m").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_m",
+          Respuesta : $("#res_pregunta11_m").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_m",
+          Respuesta : $("#res_pregunta12_m").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_m_hora",
+          Respuesta : $("#res_pregunta12_m_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_m",
+          Respuesta : $("#res_pregunta13_m").val()
+        },
+        {
+          Pregunta: "Pregunta 10_n",
+          Respuesta : $("#res_pregunta10_n").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_n",
+          Respuesta : $("#res_pregunta11_n").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_n",
+          Respuesta : $("#res_pregunta12_n").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_n_hora",
+          Respuesta : $("#res_pregunta12_n_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_n",
+          Respuesta : $("#res_pregunta13_n").val()
+        },
+        {
+          Pregunta: "Pregunta 10_o",
+          Respuesta : $("#res_pregunta10_o").val()
+        },   
+        {
+          Pregunta: "Pregunta 11_o",
+          Respuesta : $("#res_pregunta11_o").val()
+        },   
+        {
+          Pregunta: "Pregunta 12_o",
+          Respuesta : $("#res_pregunta12_o").val()
+        },  
+        {
+          Pregunta: "Pregunta 12_o_hora",
+          Respuesta : $("#res_pregunta12_o_hora").val()
+        }, 
+        {
+          Pregunta: "Pregunta 13_o",
+          Respuesta : $("#res_pregunta13_o").val()
+        },
+        {
           Pregunta: "Pregunta 14",
           Respuesta : $("#res_pregunta14").val()
         },
